# docker-lorem-text

./: .dockerignore  .tmuxinator.yml  Dockerfile  Makefile  README.md  fluent-bit-configmap.yaml  invoke.yaml  k8s-crons.yaml  pyproject.toml  run.py  setup.cfg
container/root/etc/cont-finish.d/: 00-app.sh
container/root/etc/services-available/app/: finish  run
container/root/run.d/: 99-app.sh
container/root/scripts/: set_permissions.sh
tasks/: git.py  utils.py
