[tool.poetry]
name = "docker-lorem-text"
version = "0.0.0"
description = "lorem ipsum generator"
authors = ["Malcolm Jones <jarvis@theblacktonystark.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
loguru = "^0.5.2"
invoke = "^1.4.1"
better_exceptions = "^0.2.2"
lorem-text = "^1.5"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
# isort = "^4.3"
autoflake = "^1.3"
# # wemake-python-styleguide = "^0.14.0"
# mypy = "^0.770"
# flake8-fixme = "^1.1"
# pytest = "^5.4"
# pytest-cov = "^2.9"
# # pytest-asyncio = "^0.12.0"
# pytest-env = "^0.6.2"
# # docker = "^4.2"
# httpx = "^0.13.3"
# # asgi-lifespan = "^1.0.0"
# pdbpp = "^0.10.2"
# # aiomonitor = "^0.4.5"
# pre-commit = "^2.5.1"
# MonkeyType = "^20.5.0"
# autopep8 = "^1.5.3"
pylint = "^2.6.0"
# vulture = "^1.5"
# # freezegun = "^0.3.15"
# hunter = "^3.1.3"
# # sqlalchemy-stubs = "^0.3"
# rope = "^0.17.0"
# pytest-sugar = "^0.9.3"
# pytest-mock = "^3.1.1"
# # pytest-leaks = "^0.3.1"
# pytest-mypy = "^0.6.2"
# pytest-dotenv = "^0.5.1"
# pytest-watch = "^4.2.0"
# # ipython = "^7.15.0"
# # Sphinx = "^3.1.0"
# # sphinx-autodoc-typehints = "^1.10.3"
# sphinx-autodoc-annotation = "^1.0-1"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 88
target-version = ['py37', 'py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | \.__pycache__
    | __pycache__
    # All of the above are the default values for black exclude. Specify custom bellow.
    | \.vscode
    | \.pytest_cache
    | .pre-commit-cache/*
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
